# fire-hermes-plugins

./: .gitignore  test_parity.py  todo.md
taskweft/: __init__.py  plugin.yaml
taskweft/gltf_interactivity/: 00_header_and_introduction.md  01_core_concepts.md  02_node_types.md  03_extending_gltf.md  04_validation.md
taskweft/holographic/: __init__.py  holographic.py  retrieval.py  store.py
taskweft/holographic/tests_hypothesis/: conftest.py  test_holographic.py  test_retrieval.py  test_store.py
taskweft/lean/: Planner.lean  lake-manifest.json  lakefile.lean
taskweft/lean/HRR/: Properties.lean
taskweft/plan/: .gitignore  .gitrepo  .pre-commit-config.yaml  __init__.py  pyproject.toml
taskweft/plan/.github/workflows/: ci.yml  docs.yml  entity-capabilities.yml
taskweft/plan/examples/gltf_interactivity/: context.jsonld
taskweft/plan/examples/gltf_interactivity/domain/: gltf_domain_interpreter.py
taskweft/plan/ipyhop/: __init__.py  actions.py  capabilities.py  failure_handler.py  graph_utils.py  mc_executor.py  methods.py  multigoal.py  planner.py  plotter.py  state.py  temporal_metadata.py
taskweft/plan/ipyhop/temporal/: __init__.py  stn.py  utils.py
taskweft/plan/schemas/: taskweft.json
taskweft/plan/tests_hypothesis/: README.md  conftest.py  test_actions.py  test_entity_capabilities.py  test_ipyhop_backtracking.py  test_ipyhop_planning.py  test_methods.py  test_multigoal.py  test_state.py  test_stn.py  test_temporal_metadata.py  test_temporal_utils.py
taskweft/plan/tools/: __init__.py  _common.py  plan_jsonld.py
taskweft/plan_memory/: LICENSE  __init__.py  bridge.py  rebac.py
taskweft/plan_memory/schemas/: plan_with_memory.json  recall_plans.json
taskweft/plan_memory/tests_hypothesis/: __init__.py  test_bridge.py  test_rebac.py
